# AnimalSynth

./: .gitignore  AnimalSynth.filtergraph  AnimalSynth.jucer  CMakeLists.txt  Doxyfile  README.md
Source/: AnimationDisplayComponent.cpp  AnimationDisplayComponent.h  BorderedPanel.h  CustomLookAndFeel.h  FXPanel.cpp  FXPanel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScaledVisualizerComponent.h
